# made-with-smile

./: .clang-format  .gitignore  README.md
breakout/: CMakeLists.txt  Makefile.web  README.md  highscores.lst  main.c  shell.html
breakout/include/: Ball.h  Brick.h  Constants.h  Dependencies.h  LevelMaker.h  Paddle.h  PowerUp.h  Util.h
breakout/include/dicts/: SoundDict.h  TextureDict.h
breakout/include/scenes/: EnterHighScore.h  GameOver.h  HighScore.h  PaddleSelect.h  Play.h  Serve.h  Start.h  Victory.h
breakout/src/: Ball.c  Brick.c  Constants.c  LevelMaker.c  Paddle.c  PowerUp.c  Settings.c  Util.c
breakout/src/dicts/: SoundDict.c  TextureDict.c
breakout/src/scenes/: EnterHighScore.c  GameOver.c  HighScore.c  PaddleSelect.c  Play.c  Serve.c  Start.c  Victory.c
fifty-bird/: README.md
flappy_bird/: README.md
match-3/: CMakeLists.txt  README.md  main.c
match-3/include/: Constants.h
match-3/include/dicts/: SoundDict.h  TextureDict.h
match-3/src/: Constants.c
match-3/src/dicts/: TextureDict.c
pong/: .gitignore  CMakeLists.txt  README.md  main.c
pong/include/: Paddle.h  Player.h
pong/include/scenes/: GameOver.h  Serve.h
pong/src/: Ball.c  Paddle.c  Settings.c
pong/src/scenes/: GameOver.c  Play.c  Serve.c
